# pomodoro-todo

./: .env.example  .gitignore  Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/handlers/: auth.rs
crates/api/src/routers/: auth.rs
crates/app_core/: Cargo.toml
crates/app_core/src/: config.rs  enums.rs  errors.rs  lib.rs  state.rs  utils.rs
crates/app_core/src/db/: mod.rs  postgres.rs
crates/app_core/src/dto/: auth.rs  error.rs  mod.rs  response.rs
crates/app_core/src/models/: auth_event.rs  mod.rs  oauth_account.rs  session.rs  telegram_link_code.rs  user.rs  verification.rs
crates/app_core/src/repositories/: mod.rs  user.rs  verification.rs
crates/app_core/src/services/: auth.rs  mod.rs  notification.rs
crates/bot/: Cargo.toml
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  lib.rs  state.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/db/: postgres.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  lib.rs
crates/shared/src/dto/: auth.rs
migrations/: 20260130134010_init.sql  20260131122657_init.sql
