[workspace]
members = [
    "crates/app_core",
    "crates/api",
    "crates/bot",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }


axum = { version = "0.8", features = ["json", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }


aide = { version = "0.15", features = ["axum"] }
schemars = {version = "1", features = ["uuid1"] }


teloxide = { version = "0.17.0", features = ["macros"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }


jsonwebtoken = "10.3.0"
oauth2 = "5"
argon2 = "0.5"              


serde = { version = "1", features = ["derive"] }
serde_json = "1"


validator = { version = "0.20", features = ["derive"] }


thiserror = "2"
anyhow = "1"


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


config = {version = "0.15.19"}
dotenvy = "0.15"


uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

app_core = { path = "crates/app_core" }