[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true


utoipa.workspace = true
utoipa-scalar.workspace = true

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true 
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true


app_core.workspace = true

