[package]
name = "app_core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
validator.workspace = true
uuid.workspace = true
thiserror.workspace = true
sqlx.workspace = true
config.workspace = true
dotenvy.workspace = true
argon2.workspace = true
chrono.workspace = true
ipnetwork.workspace = true
rand.workspace = true

axum.workspace = true
